--- a/setup.cfg
+++ b/setup.cfg
@@ -12,6 +12,7 @@ python_requires = >=3.8
 install_requires =
     pyyaml >= 6
     reportlab >= 3.6
+    dacite >= 1.6
 
 [options.packages.find]
 where = src
