Added command line usability

--- a/setup.cfg
+++ b/setup.cfg
@@ -16,3 +16,7 @@ install_requires =
 
 [options.packages.find]
 where = src
+
+[options.entry_points]
+console_scripts =
+    pdfgen = pdfgen.main:main
