Various feature updates

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = pdf-generator
-version = 0.0.1
+version = attr: pdfgen.__version__
 author = Peter Puska
 author_email = ppuska@lasram.hu
 
